[package]
name = "xorshift"
version = "0.1.0"
authors = ["Alexander Stocko <as@coder.gg>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/astocko/xorshift"
homepage = "https://github.com/astocko/xorshift"
description = """
Implementation of the [xoroshiro128+, xorshift128+, xorshift1024*, and splitmix64](http://xoroshiro.di.unimi.it/) PRNGs.
"""

[dependencies]
rand = "^0.3.14"
